--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,142 +1,150 @@
+// =======================
+// Variables globales
+// =======================
+$gris: rgb(191, 189, 189);
+$gris-oscuro: #adaaaa;
+$blanco: #fff;
+$celeste: lightblue;
+$fuente-base: Arial, Helvetica, sans-serif;
+$fuente-secundaria: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+// =======================
+// Estilos generales
+// =======================
 #menuOpciones a {
-    font-size: 15px;
-    font-weight: bold;
-    
+  font-size: 15px;
+  font-weight: bold;
 }
 
-.carousel-inner{
-    max-height: 30rem;
+.carousel-inner {
+  max-height: 30rem;
 }
 
 #derechos {
-    font-size: 18px;
-    background-color: rgb(191, 189, 189);
-    margin-top: 500px;
+  font-size: 18px;
+  background-color: $gris;
+  margin-top: 500px;
 }
-#encontranos{
-    font-family: Arial, Helvetica, sans-serif;
-    
+
+#encontranos {
+  font-family: $fuente-base;
 }
+
 fieldset {
-  
   margin-left: 20%;
   font-size: 15px;
-  
-  
   font-weight: bold;
-  margin-top: 40px; 
-} 
+  margin-top: 40px;
+}
 
-/* fieldset {
-  position: absolute;
-  
+.tusdatos {
+  max-width: 300px;
+  margin-top: 80px;
+  margin-left: 30%;
+  font-weight: bold;
+  font-family: $fuente-base;
+}
+
+#select-lg,
+#OS,
+#navbarNav {
+  font-family: $fuente-base;
+}
+
+#select-lg {
   font-size: 15px;
-  
-  left: 35%;
+}
+
+#OS {
+  font-size: 40px;
+}
+
+#navbarNav {
+  font-size: 10px;
   font-weight: bold;
-  margin-top: 40px; 
-} */
-  
-
-  .tusdatos {
-    
-    max-width: 300px;
-    margin-top: 80px;
-    
-    margin-left: 30%; 
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  #select-lg {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  #OS{
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-   
-  }
-  #navbarNav{
-    font-size: 10px;
-    font-weight: bold;
-  }
-  #final {
-    background-color: rgb(191, 189, 189);
 }
 
-.form-control{
-  background-color: lightblue;
+#final {
+  background-color: $gris;
 }
+
+.form-control {
+  background-color: $celeste;
+}
+
 #Copyright {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   text-align: center;
-  background-color: #adaaaa;
-  color: #fff;
+  background-color: $gris-oscuro;
+  color: $blanco;
   padding: 10px;
   z-index: 1;
 }
-button[type="submit"] {
-  max-width: 450px;
-  margin-top: 40px;
-  margin-left: 25%;
-  
-}
-button[type="reset"] {
-  max-width: 450px;
-  margin-top: 40px;
-  left: 45%;
- 
+
+// =======================
+// Botones (anidación)
+// =======================
+button {
+  &[type="submit"] {
+    max-width: 450px;
+    margin-top: 40px;
+    margin-left: 25%;
+  }
+
+  &[type="reset"] {
+    max-width: 450px;
+    margin-top: 40px;
+    left: 45%;
+  }
 }
 
-/*button[id="enviarTurno"] {
-  max-width: 450px;
-  width: 80px;
-  margin-top: 40px;
-  margin-left: 470px;
- 
-}/*
-/*button[id="limpiarTurno"] {
-  max-width: 450px;
-  width: 150px;
-  
-  margin-top: 40px;
-  margin-left: 50px;
-  
-}*/
-
-.desplegable-container,.desplegable-container2,.desplegable-container3,.desplegable-container4 {
+// =======================
+// Ventanas desplegables
+// =======================
+.desplegable-container,
+.desplegable-container2,
+.desplegable-container3,
+.desplegable-container4 {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
   z-index: 9999;
+
+  // Elementos dentro de los contenedores
+  .desplegable,
+  .desplegable2,
+  .desplegable3,
+  .desplegable4 {
+    border: 1px solid black;
+    padding: 10px;
+    background-color: whitesmoke;
+    max-width: 3000px;
+    overflow: auto;
+    max-height: 400px;
+    position: relative;
+  }
+
+  .cerrar {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+  }
 }
 
-.desplegable,.desplegable2,.desplegable3,.desplegable4 {
-  border: 1px solid black;
-  padding: 10px;
-  background-color: whitesmoke;
-  max-width: 400px;
-  position: relative;
-  max-width: 3000px;
-  overflow: auto;
-  max-height: 400px; 
-}
-
-.cerrar {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  cursor: pointer;
-}
-p{
+// =======================
+// Textos
+// =======================
+p {
   font-size: 15px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: $fuente-secundaria;
 }
-u{
+
+u {
   color: violet;
 }
